kubernetes-deployments/core/chartmuseum/templates/webgui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chartmuseum-webgui
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: webui
  selector:
    app.kubernetes.io/name: chartmuseum
  type: ClusterIP
