kubernetes-deployments/core/chartmuseum/templates/webgui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chartmuseum-webgui
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-production
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/protocol: http
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-default-security@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.options: traefik-default-tls@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: chartmuseum-ui.jsnouff.net
    http:
      paths:
      - backend:
          service:
            name: chartmuseum-webgui
            port:
              number: 3000
        path: "/"
        pathType: Prefix
  tls:
    - hosts:
        - chartmuseum-ui.jsnouff.net
      secretName: webgui-tls-secret
